Freezegun Changelog
===================

Latest
------

0.3.12
------

* Refactor classes to functions
* Ignore Selenium
* Move to pytest
* Conditionally patch time.clock

0.3.11
------

* Performance improvements
* Fix nesting time.time
* Add nanosecond property

0.3.10
------

* Performance improvements
* Coroutine support

0.3.9
-----

* If no time to be frozen, use current time
* Fix uuid1 issues
* Add support for python 3.6

0.3.8
-----

* Bugfix for old-style classes
* Ignore warnings when patching
* Add `move_to` method to change time

0.3.7
-----

* Fix CPython detection

0.3.6
-----

* Catch TypeError when fetching attribute values
* Speed improvements
* Add manual tick increment


0.3.5
-----

* Add `tick` argument to allow time to move forward
* Performance improvements
* Fix timezone example in README